--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,11 @@ AC_ARG_ENABLE(xdf,
 [  --enable-xdf           support for OS/2 extended density format disks],
 [if test x$enableval = xyes; then
   AC_DEFINE([USE_XDF],1,[Define this if you want to use Xdf])
-fi],AC_DEFINE([USE_XDF],1,[Define this if you want to use Xdf]))
+  USE_XDF=y
+fi],[AC_DEFINE([USE_XDF],1,[Define this if you want to use Xdf])
+USE_XDF=y]
+)
+AC_SUBST(USE_XDF)
 
 
 dnl Check for configuration options
@@ -89,8 +93,10 @@ AC_CHECK_LIB(sun, getpwnam)
 AC_CHECK_LIB(cam, cam_open_device)
 AC_CHECK_LIB(iconv, iconv)
 
-dnl Solaris
+dnl Check for platform-specific libraries
+AC_CHECK_LIB(socket,main)
 AX_LIB_SOCKET_NSL
+AC_CHECK_LIB(bsd,main)
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -106,6 +112,7 @@ AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
 
 dnl Check for platform-specific header files
 AC_CHECK_HEADERS(sys/fdio.h)
+AC_CHECK_HEADERS(sys/socket.h arpa/inet.h netdb.h)
 
 dnl Check for types
 AC_SYS_LARGEFILE
@@ -284,11 +291,6 @@ AC_ARG_ENABLE(floppyd,
   use_floppyd=$enableval
 fi])
 
-AC_CHECK_LIB(socket,main)
-dnl AC_CHECK_LIB(nsl,getpwnam)
-AC_CHECK_LIB(bsd,main)
-AC_CHECK_HEADERS(sys/socket.h arpa/inet.h netdb.h)
-
 if test X$use_floppyd = X -a X$no_x = X ; then
     use_floppyd="yes"
 fi
@@ -302,15 +304,17 @@ if test X$use_floppyd = Xyes; then
     FLOPPYD="floppyd floppyd_installtest"
     BINFLOPPYD="\$(DESTDIR)\$(bindir)/floppyd \$(DESTDIR)\$(bindir)/floppyd_installtest"
     AC_DEFINE([USE_FLOPPYD],1,[Define when you want to include floppyd support])
+    USE_FLOPPYD=y
     AC_FUNC_SETPGRP
 else
     FLOPPYD=
     BINFLOPPYD=
 fi
 
-
+AC_SUBST(USE_FLOPPYD)
 AC_SUBST(FLOPPYD)
 AC_SUBST(BINFLOPPYD)
+
 AC_SUBST(extraincludedir)
 AC_SUBST(extralibdir)
 AC_SUBST(MACHDEPLIBS)
